--- a/src/styles/all.css
+++ b/src/styles/all.css
@@ -16,6 +16,7 @@
   width: 100vw;
   height: 100vh;
   background-color: rgb(253, 253, 253);
+  overflow: auto;
 }
 
 .headerContainer {
@@ -26,11 +27,10 @@
 
 .searchSection {
   background-image: url(https://ychef.files.bbci.co.uk/976x549/p07y6m73.jpg);
-  /* background-color: green; */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top;
-  padding: 2% 6% 3% 6%;
+  padding: 1% 6% 2% 6%;
   color: #fff;
 }
 
@@ -44,7 +44,7 @@
 }
 
 .searchContainer {
-  background-color: rgba(0, 0, 0, 0.37);
+  background-color: rgba(0, 0, 0, 0.45);
   padding: 2% 2%;
 }
 
@@ -68,30 +68,116 @@
 }
 
 .searchContainer > .search-form {
-  width: 95%;
+  width: 100%;
   margin-top: 2%;
 }
 .searchContainer > .search-form > input {
-  width: 90%;
+  width: 83%;
+  padding: 20px;
 }
 
 .searchContainer > .search-form > .search-btn {
   margin-left: 2%;
-  width: 18%;
+  width: 17%;
   background-color: rgb(10, 110, 204);
   color: #fff;
   transition: all 0.5s ease;
+  padding: 20px;
 }
 
 .searchContainer > .search-form > .search-btn:hover {
   background-color: rgb(22, 120, 211);
 }
 
+.bodyComponent {
+  /* background-color: green; */
+  padding: 2px;
+}
+
+.categoryContainer {
+  /* width: 90%; */
+  background-color: #fff;
+}
+
+.categoryContainer > .category {
+  /* background-color: red; */
+  /* padding-right: 15px; */
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.categoryContainer > .category > .top > .category-icon {
+  /* background-color: blue; */
+}
+
+.categoryContainer > .category > .links > a {
+  text-decoration: none;
+  color: #2b2d2e;
+  padding: 0 0 0 4px;
+  font-size: 12px;
+  margin-bottom: 4px;
+}
+
+.categoryContainer > .category > .links > a:hover {
+  color: rgb(16, 117, 212);
+}
+.categoryContainer > .category > .lower .lower-right {
+  transition: all 0.3s ease-in;
+  font-size: 24px;
+}
+
+.categoryContainer > .category > .lower:hover .lower-right {
+  margin-left: 30px;
+}
+.bodyComponent > .popularCategoryContainer > .all-cats > .popular-categories {
+  padding: 5px;
+  transition: all 0.3s ease;
+  width: 20%;
+}
+
+.bodyComponent
+  > .popularCategoryContainer
+  > .all-cats
+  > .popular-categories:hover {
+  -webkit-box-shadow: 0px 0px 28px -19px rgba(0, 0, 0, 1);
+  -moz-box-shadow: 0px 0px 28px -19px rgba(0, 0, 0, 1);
+  box-shadow: 0px 0px 28px -19px rgba(0, 0, 0, 1);
+}
+
+.bodyComponent
+  > .popularCategoryContainer
+  > .all-cats
+  > .popular-categories
+  img {
+  width: 100%;
+}
+
+.bodyComponent > .ads {
+  height: 15vh;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(215, 215, 215, 1) 36%
+  );
+  border: 1px solid rgba(190, 189, 189, 0.151);
+  padding: 0 7% 0;
+}
+.bodyComponent > .ads > .imgs > img {
+  height: 7vh;
+  width: 12vw;
+  padding-left: 15px;
+}
+
+.footerComponent {
+  background-color: green;
+  height: 2vh;
+}
 /* ============================= END OF PAGES ============================ */
 
 /* ============================= HEADER ============================ */
 .header {
-  width: 80%;
+  width: 85%;
 }
 
 .left {
@@ -203,28 +289,6 @@
   padding-bottom: 10px;
 }
 
-/* .submenuContainer {
-  background-color: rgba(0, 0, 0, 0.637);
-  width: 100%;
-  height: 100vh;
-}
-
-.submenu .left {
-  background-color: #fff;
-  padding-bottom: 10px;
-  flex: 4;
-}
-
-.submenu .right {
-  flex: 8;
-  display: none;
-}
-
-.submenu .right .top {
-  padding-bottom: 5px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-} */
-
 .submenu-item {
   cursor: pointer;
   padding: 8px 20px;
@@ -262,6 +326,10 @@
   flex-direction: row;
 }
 
+.flex-direction-column {
+  flex-direction: column;
+}
+
 .justify-content-center {
   justify-content: center;
 }
@@ -270,8 +338,8 @@
   justify-content: space-between;
 }
 
-.p-15 {
-  padding-right: 15px;
+.justify-content-space-evenly {
+  justify-content: space-evenly;
 }
 
 .fw-600,
@@ -287,10 +355,6 @@
   align-items: center;
 }
 
-.fz-14 {
-  font-size: 14px;
-}
-
 .thin {
   border: 0.05px solid rgba(146, 146, 146, 0.125);
 }
@@ -303,7 +367,7 @@
   color: #666b72;
 }
 
-.dark-gray,
+.color-darkgray,
 .menuItem {
   color: #2b2d2e;
 }
@@ -356,12 +420,28 @@
   font-size: 16px;
 }
 
+.fz-14 {
+  font-size: 14px;
+}
+
+.fz-12 {
+  font-size: 12px;
+}
+
+.fz-10 {
+  font-size: 11px;
+}
+
 .outline-none {
   outline: none;
 }
 
-.w-80p {
-  width: 80%;
+.w-85p {
+  width: 85%;
+}
+
+.w-15p {
+  width: 20%;
 }
 
 .w-100p {
@@ -377,15 +457,38 @@
 }
 
 .ml-10p {
-  margin-left: 10%;
+  margin-left: 7.5%;
+}
+
+.ml-10 {
+  margin-left: 10px;
+}
+
+.mb-10 {
+  margin-bottom: 10px;
 }
 
 .mt-10 {
   margin-top: 10px;
 }
 
+.mt-2p {
+  margin-top: 2%;
+}
+.pr-15 {
+  padding-right: 15px;
+}
+
 .p-10 {
   padding: 10px;
+}
+
+.pr-10 {
+  padding-right: 10px;
+}
+
+.pl-10 {
+  padding-left: 10px;
 }
 
 .overflow-hidden {
@@ -404,5 +507,13 @@
   color: rgb(16, 117, 212);
 }
 
-
+.color-lightgray {
+  color: rgb(192, 192, 192);
+}
+.color-gray {
+  color: gray;
+}
+.flex-wrap-wrap {
+  flex-wrap: wrap;
+}
 /* ==================================== end styled classes =========================== */
