working on the login form

--- a/src/styles/all.css
+++ b/src/styles/all.css
@@ -196,6 +196,16 @@
 
 /* ============================= END OF PAGES ============================ */
 
+
+
+/* =============================LOGIN FORM ============================ */
+.form{
+  
+}
+
+
+/* ============================= END OF LOGIN FORM ============================ */
+
 /* ============================= HEADER ============================ */
 .header {
   width: 85%;
